--- a/CommandHelper/storage.yml
+++ b/CommandHelper/storage.yml
@@ -7,19 +7,20 @@ storage:
   Like_A_Boss382fightClubWins: '2'
   xSp4rkzfightClubLosses: '11'
   mrnegan121212fightClubWins: '1'
-  topmiddle3: '3'
+  topmiddle3: '0'
+  749cb576020a4350852c99e8185874f9fightclubparticipantID: '56110793'
   topmiddle2: '0'
   WaggityfightClubLosses: '8'
   Phantom_Troll33fightClubWins: '1'
   Batman_DCUfightClubWins: '2'
   adambashfightClubWins: '12'
   dibs1205spouse: '"RedSkies_"'
-  bottomright3: '2'
-  topmiddle1: '4'
+  bottomright3: '1'
+  topmiddle1: '9'
   HerpaDerp10000fightClubWins: '1'
-  bottomright1: '4'
+  bottomright1: '3'
   RedSkies_spouse: '"dibs1205"'
-  bottomright2: '3'
+  bottomright2: '9'
   xDcGamer_MCUfightClubWins: '4'
   epp:
     cb871f86_94e5_4bf3_a78e_42f73c2215c4: null
@@ -31,15 +32,16 @@ storage:
   AquariusYTfightClubWins: '5'
   TooFluffyfightClubWins: '25'
   mrnegan121212fightClubLosses: '3'
-  dibs1205fightClubLosses: '2'
-  God_Doesnt_ExistfightClubWins: '47'
+  dibs1205fightClubLosses: '4'
+  God_Doesnt_ExistfightClubWins: '48'
   septer101fightClubWins: '10'
   bottommiddle1: '3'
-  bottommiddle2: '0'
+  bottommiddle2: '9'
   MrFlameYTspouse: '"Camulll"'
   mythguy1226spouse: '"WhatAreThose05"'
-  bottommiddle3: '1'
+  bottommiddle3: '0'
   bamfbfightClubLosses: '10'
+  286a6fb446f64d97be53eb89cc2ff65afightclubparticipantID: '""'
   ImUnicornRainbowfightClubWins: '3'
   mythguy1226fightClubLosses: '19'
   Leo4RealfightClubWins: '3'
@@ -53,10 +55,13 @@ storage:
   RozuufightClubLosses: '1'
   aldrin524fightClubWins: '32'
   adambashfightClubLosses: '25'
+  _DanielWestCW_fightClubLosses: '1'
   MatthewseagodfightClubLosses: '1'
   JackLauren1fightClubLosses: '1'
   fuckyoutournamentOwner: '""'
+  b341708c7d8f49bf93f78d76550ed02bspleefparticipantID: '56111172'
   aldrin524fightClubLosses: '4'
+  _DanielWestCW_fightClubWins: '3'
   TooFluffyfightClubLosses: '"3"'
   gaminglemonJTfightClubLosses: '4'
   AquariusYTfightClubLosses: '10'
@@ -66,6 +71,7 @@ storage:
   SS_HarleyQuinnspouse: '"God_Doesnt_Exist"'
   MrFlameYTfightClubWins: '2'
   SpyJay_YTfightClubWins: '3'
+  b341708c7d8f49bf93f78d76550ed02bfightclubparticipantID: '56110660'
   WhatAreThose05spouse: '"mythguy1226"'
   KazutoKirigiafightClubWins: '2'
   gaminglemonJTfightClubWins: '9'
@@ -75,6 +81,7 @@ storage:
   eca9177a9ef24e69b1fc804d9d848303spleefparticipantID: '56102760'
   Eobard765ManfightClubLosses: '22'
   raseraaspouse: '"Phantom_Troll33"'
+  fightclubtournamentID: '""'
   749cb576020a4350852c99e8185874f9spleefparticipantID: '56107944'
   MegaGreninja25fightClubLosses: '1'
   Lambsauce_Gamingspouse: '"Sea_Wolf995"'
@@ -89,18 +96,18 @@ storage:
   spleeftournamentOwner: '""'
   Leo4RealfightClubLosses: '2'
   HerpaDerp10000spouse: '""'
-  bottomleft2: '3'
-  bottomleft3: '0'
+  bottomleft2: '8'
+  bottomleft3: '1'
   28556dea667d409fb2fffb4177a20ff2spleefparticipantID: '56107957'
   ZoomplaysfightClubWins: '4'
   RedstoneMonkeyfightClubWins: '1'
   BrinePlaysYTfightClubLosses: '2'
   28556dea667d409fb2fffb4177a20ff2fuckyouparticipantID: '56102268'
-  87fb3c6c5ff64bf6b326992c6137ea12spleefparticipantID: '56107940'
+  87fb3c6c5ff64bf6b326992c6137ea12spleefparticipantID: '56111170'
   nullmoopsparticipantID: '""'
   GingastriesfightClubLosses: '1'
-  God_Doesnt_ExistfightClubLosses: '35'
-  87fb3c6c5ff64bf6b326992c6137ea12fightclubparticipantID: '56105845'
+  God_Doesnt_ExistfightClubLosses: '37'
+  87fb3c6c5ff64bf6b326992c6137ea12fightclubparticipantID: '56110654'
   87fb3c6c5ff64bf6b326992c6137ea12tournamentOwned: '""'
   Batman_DCUfightClubLosses: '1'
   Grim765Reaperspouse: '"Minestock451"'
@@ -109,21 +116,21 @@ storage:
   ThatCraftLifefightClubWins: '1'
   xSp4rkzfightClubWins: '7'
   superiorxmanfightClubLosses: '1'
-  topleft1: '3'
+  topleft1: '5'
   f621586e8ef8448d926486b61375052efightclubparticipantID: '56105894'
-  topleft2: '2'
+  topleft2: '3'
   Predamorph1519spouse: '"Mutant_Thyla"'
   87fb3c6c5ff64bf6b326992c6137ea12fuckyouparticipantID: '56102258'
-  topleft3: '1'
+  topleft3: '2'
   BrinePlaysYTfightClubWins: '1'
   BananaA_fightClubWins: '1'
   LittleF1refightClubLosses: '5'
   ImUnicornRainbowfightClubLosses: '1'
-  mythguy1226fightClubWins: '10'
+  mythguy1226fightClubWins: '11'
   raseraafightClubLosses: '1'
   nightghost2spouse: '"Taiyou_"'
   EmmettGamingfightClubWins: '5'
-  bottomleft1: '8'
+  bottomleft1: '0'
   Phantom_Troll33spouse: '"raseraa"'
   xDcGamerfightClubWins: '1'
   TonyBongosfightClubWins: '9'
@@ -140,9 +147,9 @@ storage:
   474707f7f8b443ea89789cae17917e82spleefparticipantID: '56107950'
   LostInGalaxeh_fightClubLosses: '5'
   topright3: '0'
-  topright2: '3'
+  topright2: '5'
   bluesbabyspouse: '"God_Doesnt_Exist"'
-  topright1: '8'
+  topright1: '2'
   EmmettGamingfightClubLosses: '6'
   SuperCrafters200spouse: '"xDcGamer_MCU"'
   EmmettGamingspouse: '"LostInGalaxeh_"'
