--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -13918,7 +13918,7 @@ users:
       name: Blaziken1234567
   474707f7-f8b4-43ea-8978-9cae17917e82:
     group:
-    - blacklightning
+    - firestormraymondstein
     options:
       name: ThatCraftLife
     permissions:
@@ -14606,7 +14606,7 @@ users:
         permissions: []
   5a56cc7e-4192-41db-b88a-0e7d1c3904bb:
     group:
-    - martianmanhunter
+    - infinitythanos
     options:
       name: Clayman98
   5a5f392d-d3db-4c99-85e1-3935e36699be:
@@ -14931,7 +14931,7 @@ users:
       name: Jomyto
   648d8eae-fe1e-4b6a-a418-9a62cf121906:
     group:
-    - flashbarryallen
+    - flashbartallen
     options:
       name: webster_brother
   64accd93-7258-4317-b96b-6ccac8cd0165:
@@ -15551,8 +15551,7 @@ users:
     - chat.cooldown
     worlds:
       fightclub:
-        permissions:
-        - essentials.protect.pvp
+        permissions: []
       greenfield:
         permissions: []
   74ac2d34-5234-430c-a11c-197b8af3a9c6:
@@ -16381,6 +16380,7 @@ users:
       prefix: ''
       suffix: ''
     permissions:
+    - multiverse.access.policeoffice
     - tournament.create
     - -arrest.onjoin
     - -is.criminal
@@ -16467,7 +16467,7 @@ users:
         permissions: []
   89dfe8bd-6d75-4a20-a23e-84259bfeccc8:
     group:
-    - kirito
+    - savitar
     options:
       name: _Voiden_
     permissions:
@@ -17922,7 +17922,7 @@ users:
         permissions: []
   b341708c-7d8f-49bf-93f7-8d76550ed02b:
     group:
-    - beerus
+    - mrmxyzptlk
     options:
       name: _DanielWestCW_
     worlds:
@@ -17930,6 +17930,8 @@ users:
         permissions: []
       fightclub:
         permissions: []
+    permissions:
+    - multiverse.access.policeoffice
   b3a6e6c4-004e-478a-9050-fa86879eee51:
     group:
     - antman
@@ -18852,7 +18854,7 @@ users:
       prefix: '&7{&4Advocating hacking&7} '
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     group:
-    - omega
+    - policechief
     options:
       name: xSp4rkz
     permissions:
@@ -19808,7 +19810,7 @@ users:
         permissions: []
   e5ca5099-ecb7-47e0-be88-0cceb23aeb53:
     group:
-    - shazam
+    - finnthehuman
     options:
       name: DapperDrPaleo
   e5cf5f75-1c1f-4351-9059-05482442cf2f:
@@ -20292,7 +20294,7 @@ users:
       name: CaPiTaInE_FuSiOn
   ef7bcc96-3ac0-4dc6-aae7-019e5c6dda2e:
     group:
-    - dormammu
+    - blackflash
     options:
       name: superiorxman
     permissions:
@@ -20544,7 +20546,7 @@ users:
     worlds:
       fightclub:
         permissions:
-        - essentials.protect.pvp
+        - -essentials.protect.pvp
       greenfield:
         permissions: []
       office:
@@ -20571,7 +20573,7 @@ users:
         permissions: []
   f6d36689-1ed0-4f55-a20f-d40ab506d3e5:
     group:
-    - zoom
+    - flashbarryallen
     options:
       name: rockie777
   f7263849-baba-4d78-9018-3d790b86bf6b:
@@ -21338,7 +21340,7 @@ users:
       name: SchwiftyBlu
   ff0fec80-b8d2-4d10-8951-3061c6e7181d:
     group:
-    - artemis
+    - mortal
     options:
       name: Ultimate_Gamer00
     worlds:
@@ -21718,7 +21720,7 @@ users:
       name: KJtheGreat
   78dba084-d3c8-4f8b-a840-e49e4e2b450d:
     group:
-    - robocop
+    - mortal
     worlds:
       greenfield:
         permissions: []
@@ -21842,6 +21844,11 @@ users:
     - flashwallywest
     options:
       name: OggeEricson
+  0470974c-3b8b-428e-966b-5c45dcc98032:
+    group:
+    - deadshot
+    options:
+      name: drwhofan52
 worlds:
   checkers:
     inheritance:
