--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -1,7 +1,7 @@
 v2-logout:
   474707f7-f8b4-43ea-8978-9cae17917e82:
-    group: spleeflobby
-    world: spleeflobby
+    group: office
+    world: office
   7d8daa50-d197-41eb-9681-f20b863f9d8a:
     group: default
     world: survival
@@ -171,8 +171,8 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: greenfield
-    group: default
+    world: office
+    group: office
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: plots
     world: plots
@@ -475,7 +475,7 @@ v2-logout:
     world: greenfield
   9e706bf6-6fc2-4a2a-bdda-4ef531d05908:
     group: default
-    world: greenfield
+    world: survival
   966fb404-29eb-4b26-9754-62b899439e72:
     group: default
     world: greenfield
@@ -1163,8 +1163,8 @@ v2-logout:
     group: default
     world: greenfield
   286a6fb4-46f6-4d97-be53-eb89cc2ff65a:
-    group: default
-    world: greenfield
+    group: fightclub
+    world: fightclub
   bae555ec-a34f-4f63-b3f1-43ba9410defe:
     group: default
     world: greenfield
@@ -1241,8 +1241,8 @@ v2-logout:
     group: default
     world: greenfield
   749cb576-020a-4350-852c-99e8185874f9:
-    group: spleef
-    world: spleef
+    group: office
+    world: office
   235bd3b1-a3ee-443d-8b73-25744405a672:
     group: default
     world: greenfield
@@ -1572,7 +1572,7 @@ v2-logout:
     world: greenfield
   ff0fec80-b8d2-4d10-8951-3061c6e7181d:
     group: default
-    world: survival
+    world: greenfield
   aba5a53e-a89a-4f89-8ef4-a060280938d9:
     group: default
     world: greenfield
@@ -1910,5 +1910,8 @@ v2-logout:
     group: default
     world: survival
   bcb75803-9189-4561-81af-dbe1fdb46263:
+    group: default
+    world: greenfield
+  0470974c-3b8b-428e-966b-5c45dcc98032:
     group: default
     world: greenfield
