--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12499,6 +12499,8 @@ users:
     worlds:
       greenfield:
         permissions: []
+    group:
+    - blacklanterneobardthawne
   2210ca09-1ef9-4cc4-870b-d3f9462e1a3a:
     group:
     - superman
@@ -13206,7 +13208,7 @@ users:
       name: gamerklug
   340e7d5b-c44c-48c3-84a0-95a029356119:
     group:
-    - mortal
+    - savitar
     options:
       name: Aidos04
     permissions: []
@@ -14282,7 +14284,7 @@ users:
       name: madcatter222
   509408b2-b0a6-4b61-a860-cbc47a90c7a2:
     group:
-    - superman
+    - bluelanternbarryallen
     options:
       name: Busterblocker65
     worlds:
@@ -14931,9 +14933,13 @@ users:
       name: Jomyto
   648d8eae-fe1e-4b6a-a418-9a62cf121906:
     group:
-    - flashbartallen
+    - ironmanmkxliii
     options:
       name: webster_brother
+    worlds:
+      greenfield:
+        permissions: []
+    permissions: []
   64accd93-7258-4317-b96b-6ccac8cd0165:
     group:
     - spidermanpeterparker
@@ -15206,7 +15212,7 @@ users:
         permissions: []
   6aa14ed1-ea5b-46fa-afef-1622d58405e7:
     group:
-    - blackpanther
+    - godfallsuperman
     options:
       name: Hirati
   6abdd48f-0afc-42c7-b819-5aa69a189a40:
@@ -15274,9 +15280,12 @@ users:
       name: saskue101
   6bb16267-016b-49f7-858d-b28ec860eaf1:
     group:
-    - antman
+    - ultron
     options:
       name: MaskedPsycho1337
+    worlds:
+      greenfield:
+        permissions: []
   6c28fd40-c02c-496c-9503-702ef6ffc7f9:
     group:
     - deathstroke
@@ -15542,7 +15551,7 @@ users:
         permissions: []
   749cb576-020a-4350-852c-99e8185874f9:
     group:
-    - blackracerwilliewalker
+    - mortal
     options:
       name: dibs1205
     permissions:
@@ -16380,7 +16389,7 @@ users:
       prefix: ''
       suffix: ''
     permissions:
-    - multiverse.access.policeoffice
+    - -powers.wallrun
     - tournament.create
     - -arrest.onjoin
     - -is.criminal
@@ -16467,7 +16476,7 @@ users:
         permissions: []
   89dfe8bd-6d75-4a20-a23e-84259bfeccc8:
     group:
-    - savitar
+    - blackflash
     options:
       name: _Voiden_
     permissions:
@@ -16720,7 +16729,6 @@ users:
     options:
       name: TonyBongos
     permissions:
-    - multiverse.access.policeoffice
     - is.officer
     - ch.alias.onduty
     - multiverse.access.underworld
@@ -17483,7 +17491,7 @@ users:
       name: Operation_Gaming
   a8e159ea-deeb-4f73-a246-591b589adcf4:
     group:
-    - supergirl
+    - storm
     options:
       name: MrFlameYT
     permissions:
@@ -18160,7 +18168,7 @@ users:
       name: wolve15
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
     group:
-    - ghostriderjohnnyblaze
+    - onepunchman
     options:
       name: mintwhip
     permissions:
@@ -18335,7 +18343,7 @@ users:
       name: Slendergirl207
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group:
-    - doctormanhattan
+    - dumbledore
     options:
       name: v_frankenstein
     permissions:
@@ -20294,10 +20302,11 @@ users:
       name: CaPiTaInE_FuSiOn
   ef7bcc96-3ac0-4dc6-aae7-019e5c6dda2e:
     group:
-    - blackflash
+    - ghostriderjohnnyblaze
     options:
       name: superiorxman
     permissions:
+    - multiverse.access.policeoffice
     - multiverse.access.underworld
     worlds:
       fightclub:
@@ -21099,12 +21108,16 @@ users:
       name: OutlawOpossum68
   5da26092-c807-4c9b-8d08-9523f74ddc97:
     group:
-    - martianmanhunter
+    - mortal
     options:
       name: Masterable
     worlds:
       greenfield:
         permissions: []
+      newcity:
+        permissions:
+        - essentials.build.*
+        - worldedit.*
     permissions:
     - multiverse.access.policeoffice
   965ab7af-16e7-4dd0-b16c-f26d4300d23f:
@@ -21720,13 +21733,14 @@ users:
       name: KJtheGreat
   78dba084-d3c8-4f8b-a840-e49e4e2b450d:
     group:
-    - mortal
+    - martianmanhunter
     worlds:
       greenfield:
         permissions: []
       fightclub:
         permissions: []
-    permissions: []
+    permissions:
+    - multiverse.access.policeoffice
     options:
       name: BoB_The_Chicken
   19415ead-e4b1-4350-99bb-6c7de0204090:
@@ -21803,7 +21817,7 @@ users:
       name: _Flash_CW_
   f4b1d7aa-5980-497b-84c3-11fb45b48bf5:
     group:
-    - blackflash
+    - blackracerwilliewalker
     options:
       name: The_Green_Wolf
     worlds:
@@ -21815,6 +21829,11 @@ users:
     - flashwallywest
     options:
       name: TheElementalWolf
+    worlds:
+      greenfield:
+        permissions: []
+    permissions:
+    - multiverse.access.policeoffice
   f9ec92c7-5cf0-498b-bd7c-16b0dd06d093:
     group:
     - flashjaygarrick
@@ -21822,7 +21841,7 @@ users:
       name: MrRelax1
   6628b356-9bd9-4727-86b8-5e3f6020d391:
     group:
-    - kira
+    - zeus
     worlds:
       greenfield:
         permissions: []
@@ -21846,9 +21865,42 @@ users:
       name: OggeEricson
   0470974c-3b8b-428e-966b-5c45dcc98032:
     group:
-    - deadshot
+    - ironmanmkxv
     options:
       name: drwhofan52
+  e8bcaf60-cb8d-4b18-8cde-5c4e1b255c78:
+    group:
+    - raven
+    options:
+      name: DankDeidara
+  8de8cb42-12ca-425b-8f68-b8b3ccd143c7:
+    group:
+    - vegeta
+    options:
+      name: HuskyFilms1
+  8d7c235b-67d3-4dfa-b5a1-d2ce41881218:
+    group:
+    - spiderman2099
+    options:
+      name: Inovas
+  b7af0137-82b0-4b3d-ab85-e67da757ab5e:
+    group:
+    - ironmanmkxv
+    worlds:
+      greenfield:
+        permissions: []
+    permissions:
+    - multiverse.access.policeoffice
+    options:
+      name: salpaka
+  616d4efa-1788-42ae-984b-d96c8c0e85f8:
+    group:
+    - steel
+    options:
+      name: Meman_
+  8a3ea2a1-ad64-477f-b0de-136dbce10be8:
+    group:
+    - hulk
 worlds:
   checkers:
     inheritance:
