--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -9,8 +9,8 @@ v2-logout:
     world: greenfield
     group: default
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
-    world: spawn
-    group: spawn
+    world: greenfield
+    group: default
   deb20342-389e-4b5f-808f-24bd22d88aa4:
     world: survival
     group: default
@@ -54,8 +54,8 @@ v2-logout:
     group: default
     world: greenfield
   9025e96a-d286-47b0-a709-98d2a4ee42db:
-    group: default
-    world: survival
+    group: policeoffice
+    world: policeoffice
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group: office
     world: office
@@ -87,8 +87,8 @@ v2-logout:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: spleeflobby
-    group: spleeflobby
+    world: policeoffice
+    group: policeoffice
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     world: policeoffice
     group: policeoffice
@@ -232,7 +232,7 @@ v2-logout:
     world: greenfield
   89dfe8bd-6d75-4a20-a23e-84259bfeccc8:
     group: default
-    world: survival
+    world: greenfield
   f9e418bf-9c4f-47af-a963-310bff20bc36:
     world: fightclub
     group: fightclub
@@ -292,7 +292,7 @@ v2-logout:
     world: greenfield
   e37c016f-c5b4-477b-b315-6db019d27cab:
     group: default
-    world: greenfield
+    world: survival
   28bc559e-f6bc-41d5-a9a8-4b176b0c6d0a:
     group: default
     world: survival
@@ -424,7 +424,7 @@ v2-logout:
     world: greenfield
   6aa14ed1-ea5b-46fa-afef-1622d58405e7:
     group: default
-    world: metropolis
+    world: survival
   6158e41f-0a62-4c6a-8397-6aa25eae4fd7:
     group: default
     world: greenfield
@@ -531,8 +531,8 @@ v2-logout:
     group: underworld
     world: underworld
   22027a2b-0ed3-4755-9092-ee2e28de422a:
-    group: office
-    world: office
+    group: default
+    world: greenfield
   69c5e37a-7202-4116-b528-51651765f7b6:
     group: default
     world: greenfield
@@ -621,7 +621,7 @@ v2-logout:
     group: default
     world: survival
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
-    world: greenfield
+    world: infinitycity
     group: default
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
     group: default
@@ -780,8 +780,8 @@ v2-logout:
     group: default
     world: greenfield
   6bb16267-016b-49f7-858d-b28ec860eaf1:
-    group: spawn
-    world: spawn
+    group: default
+    world: greenfield
   40eecf60-9509-4262-bf54-7278851a7b8a:
     group: default
     world: survival
@@ -951,7 +951,7 @@ v2-logout:
     world: greenfield
   a1edbf8d-a559-488c-90eb-389f0bc865d3:
     group: default
-    world: survival
+    world: greenfield
   778eb122-9a94-4957-aef0-3e9f22fd24be:
     group: default
     world: greenfield
@@ -1241,8 +1241,8 @@ v2-logout:
     group: default
     world: greenfield
   749cb576-020a-4350-852c-99e8185874f9:
-    group: office
-    world: office
+    group: default
+    world: greenfield
   235bd3b1-a3ee-443d-8b73-25744405a672:
     group: default
     world: greenfield
@@ -1394,8 +1394,8 @@ v2-logout:
     group: default
     world: greenfield
   fa7cd608-8c47-4823-b8f7-fd2fd88f2515:
-    group: default
-    world: greenfield
+    group: chess
+    world: chess
   68c77a39-b32f-4acc-afb6-7f3a204b6445:
     group: default
     world: greenfield
@@ -1506,7 +1506,7 @@ v2-logout:
     world: greenfield
   5a56cc7e-4192-41db-b88a-0e7d1c3904bb:
     group: default
-    world: survival
+    world: greenfield
   1a20a7fd-2f13-4862-bd2d-ac9e6379374a:
     group: default
     world: greenfield
@@ -1887,7 +1887,7 @@ v2-logout:
     world: speedforce
   77d4cc3f-5108-42bb-ae7c-03cfa5d4b72e:
     group: default
-    world: survival_the_end
+    world: greenfield
   f4b1d7aa-5980-497b-84c3-11fb45b48bf5:
     group: default
     world: greenfield
@@ -1915,3 +1915,18 @@ v2-logout:
   0470974c-3b8b-428e-966b-5c45dcc98032:
     group: default
     world: greenfield
+  e8bcaf60-cb8d-4b18-8cde-5c4e1b255c78:
+    group: default
+    world: greenfield
+  8de8cb42-12ca-425b-8f68-b8b3ccd143c7:
+    group: deathdrop
+    world: deathdrop
+  8d7c235b-67d3-4dfa-b5a1-d2ce41881218:
+    group: default
+    world: survival
+  616d4efa-1788-42ae-984b-d96c8c0e85f8:
+    group: default
+    world: survival
+  b7af0137-82b0-4b3d-ab85-e67da757ab5e:
+    group: spawn
+    world: spawn
