--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11302,6 +11302,24 @@ groups:
         - ch.alias.run2
         - ch.alias.run1
         - ch.alias.run0
+  fanfic9e706bf66fc24a2abdda4ef531d05908:
+    inheritance:
+    - commonherotraits
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.fanficchatcolor
+        - ch.alias.fanficname
+        - ch.alias.fanficlaser
+        - ch.alias.jump2
+        - ch.alias.jump1
+        - ch.alias.jump0
+        - ch.alias.haste2
+        - ch.alias.haste1
+        - ch.alias.haste0
+        - ch.alias.run2
+        - ch.alias.run1
+        - ch.alias.run0
 schema-version: 1
 users:
   001b0b15-2f00-4ce1-acff-577e465cb175:
@@ -11353,6 +11371,7 @@ users:
     options:
       name: xDcGamer_MCU
     permissions:
+    - is.supended
     - is.officer
     - ch.alias.onduty
     - is.secretary
@@ -16399,10 +16418,7 @@ users:
     - blackracerwilliewalker
     options:
       name: Grim765Man
-    permissions:
-    - is.suspended
-    - is.officer
-    - ch.alias.onduty
+    permissions: []
     worlds:
       fightclub:
         permissions: []
@@ -17274,7 +17290,7 @@ users:
       name: NightlyTrooper
   9e706bf6-6fc2-4a2a-bdda-4ef531d05908:
     group:
-    - beastboy
+    - greenarrow
     options:
       name: MichaelKieu
     permissions:
@@ -18019,7 +18035,7 @@ users:
         permissions: []
   b341708c-7d8f-49bf-93f7-8d76550ed02b:
     group:
-    - nekron
+    - mortal
     options:
       name: _DanielWestCW_
     worlds:
@@ -18027,7 +18043,8 @@ users:
         permissions: []
       fightclub:
         permissions: []
-    permissions: []
+    permissions:
+    - chat.cooldown
   b3a6e6c4-004e-478a-9050-fa86879eee51:
     group:
     - antman
@@ -19986,7 +20003,7 @@ users:
         permissions: []
   e6de8cf0-af45-44e4-882f-d98446f4b31b:
     group:
-    - mrmxyzptlk
+    - sergeant
     options:
       name: WhatAreThose05
     permissions:
