--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -17290,7 +17290,7 @@ users:
       name: NightlyTrooper
   9e706bf6-6fc2-4a2a-bdda-4ef531d05908:
     group:
-    - greenarrow
+    - greengoblin
     options:
       name: MichaelKieu
     permissions:
