--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12843,7 +12843,7 @@ users:
     group:
     - infinitysilversurfer
     options:
-      name: BananaA_
+      name: _VampireKing_
     permissions: []
     worlds:
       fightclub:
@@ -13516,7 +13516,7 @@ users:
       name: Made2Build25
   3a930020-e9c4-4d5b-b5f4-27f8d1c21cbd:
     group:
-    - indigotribeindigo1
+    - hera
     options:
       name: IanAloveslegos
   3ab6a84f-42d2-4745-a508-5dc6a371d804:
@@ -13546,7 +13546,7 @@ users:
       name: daxakapewbropie
   3be4c2e1-b94f-4644-be50-6b06448019fd:
     group:
-    - naruto
+    - wolverine
     options:
       name: B1LLYJ0EFRACTURE
     permissions: []
@@ -15752,7 +15752,7 @@ users:
       name: superjj57
   778eb122-9a94-4957-aef0-3e9f22fd24be:
     group:
-    - redhood
+    - godspeed
     options:
       name: Jay_Gamix
     permissions: []
@@ -15880,7 +15880,7 @@ users:
       name: _Avatar_Arcadon
   7a2d4c6d-570f-44f7-b2b2-2bbcc9db86a5:
     group:
-    - blackspiderman
+    - scarletspiderbenreilly
     options:
       name: killergamerbr
   7a359ab1-4081-406a-8d2e-e627db6d6177:
@@ -17626,7 +17626,7 @@ users:
       name: Gulithor
   a90bff3f-1f10-4734-9f90-2dfb0660b66e:
     group:
-    - flashwallywest
+    - vegeta
     options:
       name: SonicRush
     permissions: []
@@ -18452,7 +18452,7 @@ users:
       name: Slendergirl207
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group:
-    - blacklanterndeathstormraymondrusch
+    - zeus
     options:
       name: v_frankenstein
     permissions:
@@ -18971,7 +18971,7 @@ users:
       prefix: '&7{&4Advocating hacking&7} '
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     group:
-    - policechief
+    - omega
     options:
       name: xSp4rkz
     permissions:
@@ -19108,7 +19108,7 @@ users:
       name: Ahmed23
   cf12947d-8b6f-463e-b40f-328fcba3c5ae:
     group:
-    - missmartian
+    - mortal
     options:
       name: Skyequakejohnson
   cf1e0751-56a2-4c5f-8846-b02b3d3fec1e:
@@ -20292,7 +20292,7 @@ users:
         permissions: []
   ecc59250-3aff-42ba-a172-9e8b37c0d578:
     group:
-    - flashbarryallen
+    - martianmanhunter
     options:
       name: MrH4ck3r
     permissions:
@@ -21716,6 +21716,11 @@ users:
     - gohan
     options:
       name: Lambsauce_Gaming
+    worlds:
+      greenfield:
+        permissions: []
+    permissions:
+    - multiverse.access.policeoffice
   0816af09-eddb-42c6-82a8-e44525989d51:
     group:
     - speedy
@@ -22143,7 +22148,7 @@ users:
       name: Dentheman04
   c71b4a7e-84f4-4518-99b2-3e942d49a9e1:
     group:
-    - darthmaul
+    - martianmanhunter
     options:
       name: Mindtaro
     worlds:
@@ -22151,7 +22156,7 @@ users:
         permissions: []
   ff775218-4682-4150-9e82-1d46ccc06003:
     group:
-    - darthsidious
+    - missmartian
     worlds:
       greenfield:
         permissions: []
@@ -22326,7 +22331,7 @@ users:
         permissions: []
   53ad3d5b-cdf9-42ab-958f-2a2ab2602268:
     group:
-    - mew
+    - beastboy
     options:
       name: _WildWarrior_
   6319f1f1-7375-4d9b-bf13-f88928ae450e:
@@ -22334,6 +22339,10 @@ users:
     - ares
     options:
       name: 21Eagles
+    worlds:
+      greenfield:
+        permissions: []
+    permissions: []
   63a18ae2-6dba-46f6-9e81-6c3faaf75189:
     group:
     - acceleratedman
@@ -22346,7 +22355,7 @@ users:
       name: Nightwingsam
   7ba04e83-39ae-4302-85fc-8070793b8845:
     group:
-    - blueranger
+    - goku
     worlds:
       greenfield:
         permissions: []
@@ -22355,7 +22364,7 @@ users:
     permissions: []
   372e0ccb-25ca-489b-88f4-119f6a947010:
     group:
-    - maui
+    - darthmaul
     options:
       name: Booplayzz
     worlds:
@@ -22365,7 +22374,7 @@ users:
     - multiverse.access.policeoffice
   76862ac1-9ade-4fd4-83b0-b2170c8c3ee5:
     group:
-    - redranger
+    - blueranger
     options:
       name: cutey62005
     worlds:
@@ -22395,6 +22404,35 @@ users:
     - ninjagokai
     options:
       name: MythosKnight
+  1e7fc537-bd78-4f39-a5d9-f532bb265099:
+    group:
+    - poseidon
+    permissions: []
+    options:
+      name: mtndew314
+  6fc36274-88ef-47a4-948c-83fe43aeb3df:
+    group:
+    - batman
+    worlds:
+      greenfield:
+        permissions: []
+    permissions:
+    - multiverse.access.policeoffice
+    options:
+      name: sidekick231121
+  d05bc174-6d2a-4498-9553-a72e064c8b2d:
+    group:
+    - kidflashwallywest
+    options:
+      name: OfficerBatman1
+  9d55c990-0831-47f9-b9b2-6e99a9d65964:
+    group:
+    - hestia
+    options:
+      name: Alexrainbowgirl
+  c130fe45-d9b8-4ff6-bd0a-2c1515f3dbaa:
+    group:
+    - greninja
 worlds:
   checkers:
     inheritance:
