--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -33,8 +33,8 @@ v2-logout:
     group: default
     world: greenfield
   f621586e-8ef8-448d-9264-86b61375052e:
-    group: spleeflobby
-    world: spleeflobby
+    group: default
+    world: greenfield
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     world: spleeflobby
     group: spleeflobby
@@ -66,7 +66,7 @@ v2-logout:
     group: default
     world: greenfield
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
-    world: survival
+    world: survival_nether
     group: default
   ba21afd9-3335-4249-998f-0fd9547ac35a:
     group: crossfire
@@ -87,11 +87,11 @@ v2-logout:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: policeoffice
-    group: policeoffice
+    world: greenfield
+    group: default
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
-    world: policeoffice
-    group: policeoffice
+    world: greenfield
+    group: default
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     world: greenfield
     group: default
@@ -463,7 +463,7 @@ v2-logout:
     world: plots
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group: default
-    world: survival_nether
+    world: greenfield
   9d377ef9-97f1-4f4f-bfec-964323713cbe:
     group: default
     world: survival
@@ -921,7 +921,7 @@ v2-logout:
     world: greenfield
   3be4c2e1-b94f-4644-be50-6b06448019fd:
     group: default
-    world: survival
+    world: greenfield
   85aa44f4-9f3b-45dc-9ea5-9bf2b00d9152:
     group: default
     world: greenfield
@@ -1107,7 +1107,7 @@ v2-logout:
     world: greenfield
   ecc59250-3aff-42ba-a172-9e8b37c0d578:
     group: default
-    world: survival
+    world: greenfield
   e8936c83-b386-4b0e-b383-2ecf7c9511e6:
     group: default
     world: greenfield
@@ -1454,8 +1454,8 @@ v2-logout:
     group: default
     world: survival
   0880eccc-feed-4a2f-9e22-d8f721f3913e:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: greenfield
   fc252bc6-ef87-447f-8735-28ec6c07731f:
     group: default
     world: greenfield
@@ -1704,7 +1704,7 @@ v2-logout:
     world: greenfield
   05696957-018e-4b7b-aced-68dfa88ea074:
     group: default
-    world: greenfield
+    world: survival
   9a30add0-fdf0-4c2d-b272-c42e837a67c7:
     group: default
     world: greenfield
@@ -2151,7 +2151,7 @@ v2-logout:
     world: survival
   6fc36274-88ef-47a4-948c-83fe43aeb3df:
     group: default
-    world: survival
+    world: greenfield
   7ba04e83-39ae-4302-85fc-8070793b8845:
     group: default
     world: greenfield
@@ -2176,3 +2176,18 @@ v2-logout:
   c7761cba-91a2-4020-a18a-2b7c203765a9:
     group: default
     world: greenfield
+  1e7fc537-bd78-4f39-a5d9-f532bb265099:
+    group: default
+    world: survival
+  0344b2a3-28a1-4530-b907-f39ab77001a2:
+    group: default
+    world: greenfield
+  d05bc174-6d2a-4498-9553-a72e064c8b2d:
+    group: default
+    world: survival
+  9d55c990-0831-47f9-b9b2-6e99a9d65964:
+    group: default
+    world: greenfield
+  9b3774df-366b-4cae-89a9-314651676610:
+    group: spawn
+    world: spawn
