--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -2129,8 +2129,8 @@ v2-logout:
     group: default
     world: greenfield
   53ad3d5b-cdf9-42ab-958f-2a2ab2602268:
-    group: default
-    world: greenfield
+    group: spawn
+    world: spawn
   cc2d2734-e784-4250-886d-5c6c714bfb09:
     group: default
     world: survival
