--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -22331,7 +22331,7 @@ users:
         permissions: []
   53ad3d5b-cdf9-42ab-958f-2a2ab2602268:
     group:
-    - beastboy
+    - godspeed
     options:
       name: _WildWarrior_
   6319f1f1-7375-4d9b-bf13-f88928ae450e:
