--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -21228,7 +21228,7 @@ users:
       name: OutlawOpossum68
   5da26092-c807-4c9b-8d08-9523f74ddc97:
     group:
-    - martianmanhunter
+    - mortal
     options:
       name: Masterable
     worlds:
@@ -22355,7 +22355,7 @@ users:
       name: Nightwingsam
   7ba04e83-39ae-4302-85fc-8070793b8845:
     group:
-    - goku
+    - blueranger
     worlds:
       greenfield:
         permissions: []
