--- a/Magic/spells.yml
+++ b/Magic/spells.yml
@@ -855,7 +855,7 @@ freezeray:
          hit: 
          - class: EffectSingle 
            location: target 
-           color: F5EFFB 
+           color: 00FFFF 
            firework: ball 
          - class: EffectSingle 
            sound: entity_experience_orb_pickup 
