--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -5195,6 +5195,8 @@ groups:
         - ch.alias.run0
         - ch.alias.run1
         - ch.alias.run2
+        - magic.cast.freezeray
+        - magic.commands.cast
   ichigokurosaki:
     inheritance:
     - commonherotraits
