--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -14737,10 +14737,11 @@ users:
       name: Xylo_Unknown
   59c423bf-2a7e-4fe2-8ac2-7393de01d583:
     group:
-    - quicksilver
+    - mortal
     options:
       name: Boss90907
     permissions:
+    - multiverse.access.policeoffice
     - multiverse.access.underworld
     worlds:
       fightclub:
@@ -16380,7 +16381,7 @@ users:
       name: Cmdr_Jalapeno
   84e3730f-defc-4474-bf5c-2b22305a9c76:
     group:
-    - flashwallywest
+    - firestormraymondstein
     options:
       name: RanDumbCEO
     worlds:
@@ -20497,7 +20498,7 @@ users:
       name: CaPiTaInE_FuSiOn
   ef7bcc96-3ac0-4dc6-aae7-019e5c6dda2e:
     group:
-    - blackracerwilliewalker
+    - darkseid
     options:
       name: superiorxman
     permissions:
@@ -21404,7 +21405,7 @@ users:
       name: Wolveriine
   0880eccc-feed-4a2f-9e22-d8f721f3913e:
     group:
-    - goku
+    - mortal
     options:
       name: ZeEnforcer
     worlds:
@@ -21792,7 +21793,7 @@ users:
       name: KatimariYo
   05696957-018e-4b7b-aced-68dfa88ea074:
     group:
-    - carnage
+    - blackspiderman
     options:
       name: Lambsauce_Gaming
     worlds:
@@ -22628,10 +22629,20 @@ users:
     - brainiac
   f41b71e1-4d5c-467c-8a64-cf9faf8ad33c:
     group:
-    - bobafett
+    - silversurfer
   e8aaea13-5f5a-4f82-ba27-5c3ac811f49f:
     group:
-    - alexabliss
+    - antman
+    worlds:
+      greenfield:
+        permissions: []
+    options:
+      name: cheetahracer1
+  36200218-dd75-45e5-a0e3-a8ef5e585121:
+    group:
+    - timewraith
+    options:
+      name: howlybird
 worlds:
   checkers:
     inheritance:
