--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -1454,8 +1454,8 @@ v2-logout:
     group: default
     world: survival
   0880eccc-feed-4a2f-9e22-d8f721f3913e:
-    group: overvoid
-    world: overvoid
+    group: policeoffice
+    world: policeoffice
   fc252bc6-ef87-447f-8735-28ec6c07731f:
     group: default
     world: greenfield
@@ -2303,5 +2303,8 @@ v2-logout:
     group: default
     world: survival
   e8aaea13-5f5a-4f82-ba27-5c3ac811f49f:
+    group: office
+    world: office
+  36200218-dd75-45e5-a0e3-a8ef5e585121:
     group: default
     world: greenfield
