--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -893,48 +893,36 @@ groups:
         - ch.alias.jump7
         - ch.alias.jump8
         - -libsdisguises.disguise.player.*
-        - libsdisguises.disguise.bat.-setinvisible
-        - libsdisguises.disguise.blaze.-setinvisible
-        - libsdisguises.disguise.cave_spider.-setinvisible
-        - libsdisguises.disguise.cow.-setinvisible
-        - libsdisguises.disguise.creeper.-setinvisible
-        - libsdisguises.disguise.elder_guardian.-setinvisible
-        - libsdisguises.disguise.enderman.-setinvisible
-        - libsdisguises.disguise.endermite.-setinvisible
-        - libsdisguises.disguise.ghast.-setinvisible
-        - libsdisguises.disguise.giant.-setinvisible
-        - libsdisguises.disguise.guardian.-setinvisible
-        - libsdisguises.disguise.iron_golem.-setinvisible
-        - libsdisguises.disguise.magma_cube.-setinvisible
-        - libsdisguises.disguise.ocelot.-setinvisible
-        - libsdisguises.disguise.pig_zombie.-setinvisible
-        - libsdisguises.disguise.player.-setinvisible
-        - libsdisguises.disguise.rabbit.-setinvisible
-        - libsdisguises.disguise.sheep.-setinvisible
-        - libsdisguises.disguise.silverfish.-setinvisible
-        - libsdisguises.disguise.skeleton.-setinvisible
-        - libsdisguises.disguise.slime.-setinvisible
-        - libsdisguises.disguise.snowman.-setinvisible
-        - libsdisguises.disguise.spider.-setinvisible
-        - libsdisguises.disguise.squid.-setinvisible
-        - libsdisguises.disguise.undead_horse.-setinvisible
-        - libsdisguises.disguise.villager.-setinvisible
-        - libsdisguises.disguise.witch.-setinvisible
-        - libsdisguises.disguise.wither.-setinvisible
-        - libsdisguises.disguise.wither_skeleton.-setinvisible
-        - libsdisguises.disguise.wolf.-setinvisible
-        - libsdisguises.disguise.zombie.-setinvisible
-        - libsdisguises.disguise.zombie_villager.-setinvisible
-        - libsdisguises.disguise.evoker.-setinvisible
-        - libsdisguises.disguise.polar_bear.-setinvisible
-        - libsdisguises.disguise.husk.-setinvisible
-        - libsdisguises.disguise.stray.-setinvisible
+        -libsdisguises.disguise.Diamondhead
+        Diamondhead:
+        -libsdisguises.disguise.stray.-setinvisible
+        -libsdisguises.disguise.Grey_Matter
+        Grey_Matter:        
         - libsdisguises.disguise.vex.-setinvisible
-        - libsdisguises.disguise.illusioner.-setinvisible
-        - libsdisguises.disguise.parrot.-setinvisible
-        - libsdisguises.disguise.chicken_jockey.-setinvisible
-        - libsdisguises.disguise.spider_jockey.-setinvisible
-        - libsdisguises.disguise.killer_bunny.-setinvisible
+        - libsdisguises.disguise.Heatblast.
+        Heatblast:
+        - libsdisguises.disguise.blaze.-setinvisible
+        - libsdisguises.disguise.Wildmutt.
+        Wildmutt:
+        - libsdisguises.disguise.polar_bear.-setinvisible
+        - libsdisguises.disguise.Stinkfly.
+        Stinkfly:
+        - libsdisguises.disguise.silverfish.-setinvisible
+        - libsdisguises.disguise.Ghostfreak.
+        Ghostfreak:
+        - libsdisguises.disguise.wither.-setinvisible
+        - libsdisguises.disguise.Upgrade.
+        Upgrade:
+        - libsdisguises.disguise.creeper.-setinvisible
+        - libsdisguises.disguise.Four_Arms.
+        Four_Arms:
+        - libsdisguises.disguise.iron_golem.-setinvisible
+        - libsdisguises.disguise.XLR8.
+        XlR8:
+        - libsdisguises.disguise.vindicator.-setinvisible
+        - libsdisguises.disguise.Ripjaws.
+        Ripjaws:
+        - libsdisguises.disguise.squid.-setinvisible
         - ch.alias.run0
         - ch.alias.run1
         - ch.alias.run2
