--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,23 @@
 groups:
+  speeddemon: 
+     inheritance: 
+     - commonherotraits 
+     options: 
+       prefix: '&6S&4pee&6d &6D&1emo&6n' 
+       suffix: '&b' 
+     worlds: 
+       survival: 
+         permissions: 
+         - ch.alias.run0
+         - ch.alias.run1
+         - ch.alias.run2
+         - ch.alias.run3
+         - ch.alias.run4
+         - ch.alias.run5
+         - ch.alias.run6
+         - ch.alias.run7
+         - ch.alias.run8
+         - ch.alias.run9
   3dmanchuckandhal:
     inheritance:
     - commonherotraits
