--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,3 +1,4 @@
+
 groups:
   3dmanchuckandhal:
     inheritance:
@@ -8785,7 +8786,7 @@ groups:
         - ch.alias.carryplayer
         - worldedit.navigation.thru.command
         - essentials.tppos
-        - ch.alias.reverseflasheoabardthawne
+        - ch.alias.reverseflashdanielwest
         - ch.alias.speedforcewhirlwind
         - essentials.warps.speedforce
         - ch.alias.jump0
@@ -8807,6 +8808,7 @@ groups:
         - ch.alias.haste2
         - ch.alias.haste3
         - ch.alias.haste4
+        - ch.alias.lightning
   rmika:
     inheritance:
     - commonherotraits
