--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -17666,7 +17666,7 @@ users:
       name: grimreaper0202
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - vibe
+    - savitar
     options:
       name: nightghost2
     permissions:
