--- a/Citizens/templates.yml
+++ b/Citizens/templates.yml
@@ -1,4 +1,4 @@
-wondergirldt: 
+wondergirldonnatroy: 
   override: false 
   replacements: 
     traits: 
@@ -27,7 +27,7 @@ wondergirldt:
       usedefaultstuckaction: true 
     uuid: c8b88131-52d4-4af0-9593-ddcdb3d56058
     traitnames: spawned,type,inventory,owner,gravity,location 
-    name: WonderGirl(DT) 
+    name: WonderGirlDonnaTroy 
 hippolytadc:
   override: false
   replacements:
